--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,5 +1,18 @@
-<header class="w-full py-2 bg-[#3571d4]">
-  <div class="text-center">
-    <h2 class="font-medium text-xl text-white">LinguaBot</h2>
+<header
+  class="w-full fixed py-2 text-black"
+  style="
+    background-color: rgba(255, 255, 255, 0.7);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+  "
+>
+  <div class="flex flex-row px-7 justify-between">
+    <div>
+      <h2 class="font-bold cursor-pointer" [routerLink]="['']">LinguaBot</h2>
+    </div>
+
+    <div class="">
+      <a [routerLink]="['/layout/contact']">About Me</a>
+    </div>
   </div>
 </header>
