--- a/src/app/pages/level/level.component.html
+++ b/src/app/pages/level/level.component.html
@@ -3,7 +3,7 @@
     <h2 class="text-xl font-bold text-gray-800 mb-2 text-center">
       Select your Level
     </h2>
-    <p class="text-gray-500 mb-6 text-center">
+    <p class="text-gray-500 mb-6 text-sm text-center">
       Select your proficiency level to begin
     </p>
 
@@ -24,11 +24,21 @@
     </div>
 
     <button
-      [routerLink]="['/layout/chat']"
+      [routerLink]="selectedLevel ? ['/layout/chat'] : null"
+      [disabled]="!selectedLevel"
       type="submit"
-      class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 rounded-lg transition duration-200"
+      class="w-full cursor-pointer bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 rounded-lg transition duration-200 disabled:opacity-50 disabled:cursor-not-allowed"
     >
       Start Chat
+    </button>
+
+    <!-- Go Back Button -->
+    <button
+      [routerLink]="['/layout']"
+      type="button"
+      class="w-full cursor-pointer mt-3 bg-gray-200 hover:bg-gray-300 text-gray-700 font-semibold py-2 rounded-lg transition duration-200"
+    >
+      Go Back
     </button>
   </div>
 </div>
