--- a/src/styles.css
+++ b/src/styles.css
@@ -17,5 +17,9 @@
   font-family: "Poppins", sans-serif;
 }
 body {
-  background-color: #f8f9f9;
+  background-color: rgba(255, 255, 255, 0.6);
+  backdrop-filter: blur(10px);
+  border-radius: 12px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.3);
 }
